--- a/retoure-persistence/pom.xml
+++ b/retoure-persistence/pom.xml
@@ -2,28 +2,16 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>retoure-server</artifactId>
         <groupId>eu.artofcoding.retoure</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>retoure-persistence</artifactId>
-
-    <!--
-        Project Information
-    -->
     <name>Retoure Persistence</name>
     <url>http://www.retourenportal.com</url>
-
     <packaging>ejb</packaging>
-
-    <properties>
-    </properties>
-
     <dependencies>
         <!--
             Java EE
@@ -65,14 +53,12 @@
             <version>${project.version}</version>
         </dependency>
     </dependencies>
-
     <build>
         <resources>
             <resource>
                 <directory>src/main/resources</directory>
             </resource>
         </resources>
-        <finalName>${project.artifactId}-${project.version}</finalName>
+        <finalName>${project.artifactId}-${buildNumber}</finalName>
     </build>
-
 </project>
