--- a/retoure-api/pom.xml
+++ b/retoure-api/pom.xml
@@ -3,28 +3,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <!--
-        POM.
-    -->
-    <groupId>eu.artofcoding.retoure</groupId>
-    <artifactId>retoure-api</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
     <parent>
         <artifactId>retoure-server</artifactId>
         <groupId>eu.artofcoding.retoure</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <!--
-        Project Information.
-    -->
+    <artifactId>retoure-api</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <name>Retoure API</name>
     <url>http://www.retourenportal.com</url>
-
     <packaging>jar</packaging>
-
-    <properties>
-    </properties>
-
     <dependencies>
         <!--
             Java EE
@@ -35,7 +23,7 @@
             <scope>provided</scope>
         </dependency>
         <!--
-            CDI.
+            CDI
         -->
         <dependency>
             <groupId>javax.enterprise</groupId>
@@ -43,7 +31,7 @@
             <scope>provided</scope>
         </dependency>
         <!--
-            Beetlejuice.
+            Beetlejuice
         -->
         <dependency>
             <groupId>eu.artofcoding.beetlejuice</groupId>
@@ -54,8 +42,7 @@
             <artifactId>beetlejuice-cdm</artifactId>
         </dependency>
     </dependencies>
-
     <build>
+        <finalName>${project.artifactId}-${buildNumber}</finalName>
     </build>
-
 </project>
