--- a/retoure-dhl-client/pom.xml
+++ b/retoure-dhl-client/pom.xml
@@ -2,26 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>eu.artofcoding.retoure</groupId>
-    <artifactId>retoure-dhl-client</artifactId>
-
     <parent>
         <groupId>eu.artofcoding.retoure</groupId>
         <artifactId>retoure-server</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-    <!--
-        Project Information.
-    -->
+    <artifactId>retoure-dhl-client</artifactId>
     <name>Retoure DHL Client</name>
     <url>http://www.retourenportal.com</url>
-
-    <properties>
-    </properties>
-
     <dependencies>
         <!--
             CDI
@@ -57,7 +46,6 @@
             <version>${project.version}</version>
         </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <!-- jaxws-maven-plugin -->
@@ -90,7 +78,6 @@
                 </configuration>
             </plugin>
         </plugins>
-        <finalName>${project.artifactId}-${project.version}</finalName>
+        <finalName>${project.artifactId}-${buildNumber}</finalName>
     </build>
-
 </project>
