--- a/retoure-static-web/pom.xml
+++ b/retoure-static-web/pom.xml
@@ -2,23 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
+    <modelVersion>4.0.0</modelVersion>
     <parent>
         <artifactId>retoure-server</artifactId>
         <groupId>eu.artofcoding.retoure</groupId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-
-    <modelVersion>4.0.0</modelVersion>
-
     <artifactId>retoure-static-web</artifactId>
-
-    <!--
-        Project Information.
-    -->
     <name>Retoure Static Web</name>
     <url>http://www.retourenportal.com</url>
-
     <properties>
         <!-- Maven Plugins -->
         <version.org.apache.maven.plugins.maven-war-plugin>2.2</version.org.apache.maven.plugins.maven-war-plugin>
@@ -27,7 +19,6 @@
         <!-- GlassFish -->
         <version.org.glassfish.maven.plugin.maven-glassfish-plugin>2.1</version.org.glassfish.maven.plugin.maven-glassfish-plugin>
     </properties>
-
     <build>
         <plugins>
             <!-- maven-war-plugin -->
@@ -46,7 +37,6 @@
                 <version>${version.org.glassfish.maven.plugin.maven-glassfish-plugin}</version>
             </plugin>
         </plugins>
-        <finalName>retoure-static-web</finalName>
+        <finalName>${project.artifactId}-${buildNumber}</finalName>
     </build>
-
 </project>
