--- a/retoure-web-helper/pom.xml
+++ b/retoure-web-helper/pom.xml
@@ -2,30 +2,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <modelVersion>4.0.0</modelVersion>
-
-    <groupId>eu.artofcoding.retoure</groupId>
-    <artifactId>retoure-web-helper</artifactId>
-    <version>1.0.0-SNAPSHOT</version>
-
     <parent>
         <groupId>eu.artofcoding.retoure</groupId>
         <artifactId>retoure-server</artifactId>
         <version>1.0.0-SNAPSHOT</version>
     </parent>
-
-    <!--
-        Project Information.
-    -->
+    <artifactId>retoure-web-helper</artifactId>
+    <version>1.0.0-SNAPSHOT</version>
     <name>Retoure Web Components and Helper</name>
     <url>http://www.retourenportal.com</url>
-
     <packaging>jar</packaging>
-
-    <properties>
-    </properties>
-
     <dependencies>
         <!--
             Java EE
@@ -62,7 +49,6 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
-
     <build>
         <resources>
             <resource>
@@ -77,7 +63,6 @@
                 <directory>src/main/webapp/resources</directory>
             </resource>
         </resources>
-        <finalName>${project.artifactId}-${project.version}</finalName>
+        <finalName>${project.artifactId}-${buildNumber}</finalName>
     </build>
-
 </project>
