--- a/pom.xml
+++ b/pom.xml
@@ -499,6 +499,11 @@
             </dependency>
             <dependency>
                 <groupId>eu.artofcoding.beetlejuice</groupId>
+                <artifactId>beetlejuice-persistence</artifactId>
+                <version>1.2.0-SNAPSHOT</version>
+            </dependency>
+            <dependency>
+                <groupId>eu.artofcoding.beetlejuice</groupId>
                 <artifactId>beetlejuice-cdm</artifactId>
                 <version>1.2.0-SNAPSHOT</version>
             </dependency>
