--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <version>1.1.0</version>
     </parent>
     -->
+    <groupId>eu.artofcoding.retoure</groupId>
     <artifactId>retoure-server</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <name>Retoure Server</name>
